# libertinus-analysis

./: .gitignore  ANCHOR-HEURISTICS.md  LICENSE  README-FONTS.md  README.md  faller.txt  implied_anchors.txt  legacy_run.py  print_orphans.py  pyproject.toml  requirements.txt  run.py  run_build_fontmetrics.py  run_patch_font.py  run_print_combo_matrix.py  run_print_derefence_anchor.py  run_print_report_fontmetrics.py  run_xelatex_report.sh  test_biuld_fontmetrics.sh  test_build_fontmetrics.sh  todo.txt
data/: LibertinusSerif-Regular-bbox.txt  constants.py  vertical_data.py
data/fea/: ccmp.fea
data/fontanchors_human/: italic.py  regular.py  semibold.py  semibold_italic.py
data/fontdata/: libertinus_italic.py  libertinus_regular.json  libertinus_regular.py  regular.py  semibold.py  semibold_italic.py
data/fontmetrics/: README.md  SCHEMA.md  italic.json  regular.json  semibold.json  semibold_italic.json
data/fontsemantics/: SCHEMA.md
data/ipa/: history_ipa_unicode.py  ipa_unicode.py
data/legacy-fontdata/: regular.py
docs/: knowledge.md
fonts/: LibertinusSerif-Regular-patch#1.ttx  LibertinusSerif-Regular.ttx
scripts/: geometry.py  run.py  shaping.py
src/libertinus_analysis/: __init__.py  classifier_helpers.py  classifiers.py  combo_matrix.py  config.py  constants.py  dereference_anchor.py  font_context.py  font_helpers.py  font_patching.py  font_patching_helpers.py  fontmetrics_extract_tags.py  fontmetrics_extractor.py  fontmetrics_helpers.py  (+11 more)
src/libertinus_analysis.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tex/: libertinus-analysis.tex
(+43 files in other folders)
