[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "libertinus_analysis"
version = "0.1.0"
description = "Analysis of combining marks in Libertinus"
authors = [{ name = "Elliott Pearl" }]
dependencies = [
    "fonttools",
    "uharfbuzz"
]

[tool.setuptools.packages.find]
where = ["src"]
